raffia/tests/error/qualified-rule/unexpected-comma.snap
---
source: raffia/tests/error.rs
---
error: CSS rule is expected
  ┌─ unexpected-comma.css:4:4
  │
4 │   },
  │    ^


